--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   scoped_model: ^0.2.0
+  shared_preferences: ^0.4.2
   path_provider: ^0.4.1
   http: ^0.11.3+16
 
