--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -27,6 +27,8 @@
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UISupportedInterfaceOrientations</key>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Location useage is required for Product's location</string>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
