--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,15 +8,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  scoped_model: ^0.2.0
+  map_view: ^0.0.14
+  scoped_model: ^0.3.0
   shared_preferences: ^0.4.2
   path_provider: ^0.4.1
-  http: ^0.11.3+16
+  http: "^0.11.3+16"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+dependency_overrides:
+  uri: ^0.11.3
+  quiver: ^0.29.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
